--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="fonts/helvetica_bold.ttf" />
     <link rel="stylesheet" href="fonts/lunchbox.otf" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.comp.css" />
     <title>chef chips</title>
   </head>
   <body>
