--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="fonts/helvetica_bold.ttf" />
     <link rel="stylesheet" href="fonts/lunchbox.otf" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/style.comp.css" />
+    <!--<link rel="stylesheet" href="css/style.comp.css" />-->
     <title>chef chips</title>
   </head>
   <body>
     <div class="container">
+      <input
+        type="checkbox"
+        name=""
+        class="dropdown-check"
+        id="dropdown-check"
+      />
+
       <header class="header">
         <figure class="header__logo">
           <img src="imgs/chef-logo.png" />
@@ -21,14 +28,26 @@
             <div class="header__items--item">About Us</div>
             <div class="header__items--item">Contact</div>
             <div class="header__items--item">Product</div>
+            <div class="header__items--mobile" id="burger">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
           </div>
-          <div>
+          <div class="header__search">
             <svg class="header__items--svg">
               <use xlink:href="imgs/sprite.svg#icon-magnifying-glass1"></use>
             </svg>
           </div>
         </div>
       </header>
+
+      <div class="dropdown" id="dropdown">
+        <div class="dropdown__item">About Us</div>
+        <div class="dropdown__item">Contact</div>
+        <div class="dropdown__item">Product</div>
+        <div class="dropdown__item"></div>
+      </div>
 
       <div class="slider slider__slide-1" id="slider">
         <div class="slider__header">
