refactor top slide fde

--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
         <div class="dropdown__item"></div>
       </div>
 
-      <div class="slider slider__slide-1" id="slider">
+      <div class="slider" id="slider">
         <div class="slider__header">
           <h2><span>The chief</span><span>is here...</span></h2>
           <span class="slider--btn">FIND YOUR FLAVOUR</span>
         </div>
+
+        <div class="slider__slide slider__slide-1 visible-slide"></div>
+        <div class="slider__slide slider__slide-2"></div>
+        <div class="slider__slide slider__slide-3"></div>
       </div>
 
       <div class="products">
