--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <link rel="stylesheet" href="fonts/helvetica.ttf" />
     <link rel="stylesheet" href="fonts/helvetica_bold.ttf" />
     <link rel="stylesheet" href="fonts/lunchbox.otf" />
