--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fonts/helvetica.ttf" />
     <link rel="stylesheet" href="fonts/helvetica_bold.ttf" />
     <link rel="stylesheet" href="fonts/lunchbox.otf" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/jpg" href="/imgs/chef-logo.png" />
-    <!--<link rel="stylesheet" href="css/style.comp.css" />-->
     <title>chef chips</title>
   </head>
   <body>
