--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="css/style.css" />
   <head>
+    <title>chef chips</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="fonts/helvetica.ttf" />
     <link rel="stylesheet" href="fonts/helvetica_bold.ttf" />
     <link rel="stylesheet" href="fonts/lunchbox.otf" />
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/jpg" href="/imgs/chef-logo.png" />
-    <title>chef chips</title>
   </head>
   <body>
     <div class="container" id="container">
