--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>chef chips</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=width, initial-scale=1.0, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="fonts/helvetica.ttf" />
     <link rel="stylesheet" href="fonts/helvetica_bold.ttf" />
